--- a/src/index.pug
+++ b/src/index.pug
@@ -5,4 +5,5 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
         h1 Hello world
+        img(src=require("./images/unnamed.jpg").default)
     body
